# recon3D_simulator

./: .gitignore  CMakeLists.txt  README.md
C++/: CMakeLists.txt
C++/include/: TwoImagesReconstruction.h  Visualization.h  common.h  simulation.h
C++/src/: TwoImagesReconstruction.cpp  Visualization.cpp  simulation.cpp
Matlab/: Nister_5_pt_RANSAC_Furukawa.m  Nister_5_pt_RANSAC_trucks.m  Points_Lines_3D_estimation.m  line_matches.mat  recon_from_2_images.m  recon_lines.m  recon_lines_v2.m  recon_trucks_points.m  run_kanatani_reconstruction_code.m  shapesSimulation.m  shapes_simulation.m  truck_lines.sh  truck_reconstruction.sh
Matlab/common/: ASIFT.m  ComputeEssentialHL.m  Epipoles.m  EssentialMatrixToCameraMatrix.m  FundamentalMatrixToCameraMatrix.m  GetPoseFromEssential.m  InvNormalize.m  Normalize.m  RansacOutlierRejection.m  SolveHomogeneousEq.m  Triangulation.m  Vec2Skew.m  call_LSD.m  camera_parameters_selection.m  check_point_correspondance.m  computeEssentialHL.m  correctPointsKanatani.m  correct_F.m  correct_points_kanatani.m  correct_points_kanatani_iterative.m  correct_points_kanatani_iterative_recompute_Nister.m  distPointToLineSegment.m  distance_between_lines.m  extract_points_from_line.m  findCorrectTransformation.m  generateRandomRotation.m  generate_2D_lines.m  generate_3D_lines.m  generate_random_rotation.m  getPoseFromEssential.m  hnormalise.m  invNormalize.m  lhd_5pt_EM_final.m  motionParametersKanatani.m  motion_parameters.m  normalize.m  outlierRejectionRANSAC.m  pyramid.m  readBundler.m  (+22 more)
data/: sample_point_cloud.txt
src/: main.cpp
(+11 files in other folders)
